# pbsig

./: .gitignore  .gitmodules  .rendered.boundary.cpp  <ipython-input-595-4b9c126ffe52>  DC_betti.ipynb  LICENSE.txt  README.md  SparseMatrix.cpp  alternating_minimization.py  apparent_pairs.py  betti.py  boundary.cpp  build.ninja  circle.ipynb  circle.py  circle_vineyard.py  dms.py  fbx_nonsense.py  flubber_ex.py  hello.cpp  laplacian.py  letters.py  lsst.py  nnm.py  paper.tex  persistence.py  pht_betti_curves.py  pose_betti_curves.py  project.tex  pyproject.toml  reduction.h  setup.py  sparse.py  sw1pers.py  test_persistent_betti.py  test_sparse_matrix.py  test_vineyards.py  tests.py  undefined  vineyards.py  (+2 more)
.devcontainer/: devcontainer.json
.texpadtmp/: paper.aux  paper.out  project.aux  project.out
animations/: README.md  schedule_ex.py
animations/PHT/: mpeg.py
animations/density_vineyards/: density_animation.py  schedule.txt
animations/directional_transform/: dt_anim.py
applications/: app0_codensity_simple.py  app10_sw1pers1_tau.py  app1_simplification.html  app1_simplification.py  app2_pht_classification.py  app4_sparsification.py  app5_codensity_klein.py  app6_circle_bifiltration.py  app7_output_sensitive.py  app8_rep_cycle.py  app9_ellipsoid_surface.py  rank_invariant_picture.py
benchmarks/: Makefile  generate_laplacian.py  main.prof  profile  profile_hash.cpp  profile_iter  profile_iter.cpp  profile_laplacian  profile_laplacian.cpp  test_bc  test_bc.cpp  test_pmh  test_pmh.cpp  test_ranks  test_ranks.cpp  test_ranks.py
data/: module_graph.json
examples/: B1_random_graphs.py  DepthCamera_2023-05-17-12-56-22.json  Lanczos.html  Lanczos.py  Lanczos.pyx  OPS_MODES_ND.pickle  OPS_MOVES_ND.pickle  OPS_MOVES_NL.pickle  PCG.py  adaboost_mpeg7.qmd  apparent_pairs.py  benchmark_eigsh.py  benchmark_watts.py  cache.py  circle.ipynb  circle.qmd  circle_density.py  circle_density.qmd  circle_rips.ipynb  coarsening_data.pickle  complex.txt  convex_envelope.ipynb  convex_envelope_psd.qmd  cross_corr_ex.py  d_vary.pickle  density_animation.py  derivatives.py  diffusion.qmd  envelope.py  flubber_persistence.py  flubbr.py  gradients.ipynb  grayscale_circle_motive.qmd  grayscale_img_naive_red.pickle  grayscale_img_vineyards_status.pickle  grayscale_varying_d.qmd  grayscale_varying_n.qmd  image_complex.py  issue_primme.py  lanczos_pht.py  (+42 more)
include/: PspMatrix.h  combinatorial.h  laplacian.h  pmh.h  reduction.h  reduction_concepts.h  splex_ranges.h
js/: flubber.cjs  package-lock.json  package.json
notes/: background.tex  convergence_rates.tex  counting_measure.tex  directional_transform.tex  empirical.tex  extended_abstract.tex  generic_rank.tex  gh_signatures.tex  intro_feature.tex  laplacian.tex  ngon_example.tex  overview.tex  paper.tex  pbsig.html  pbsig.md  pbsig.tex  pbsig_bib.bib  pbsig_figs.key  pictures.key  properties.tex  rank_complexity.tex  research_statement.tex  size_function.key  spectral_relaxation.tex  spri.tex  whiteboxes.tex
notes/.texpadtmp/: <.aux  background.aux  convergence_rates.aux  convergence_rates.out  directional_transform.aux  empirical.aux  extended_abstract.aux  extended_abstract.bbl  extended_abstract.blg  gh_signatures.aux  pbsig.aux  pbsig.bbl  pbsig.blg  pbsig.out  properties.aux  spri.aux  spri.bbl  spri.blg  spri.out
notes/presentation/: pbsig.html  pbsig.myst.html  pbsig.myst.qmd  pbsig.qmd  references.bib  styles.css  testing.md
notes/presentations/: pbsig.html  pbsig.myst.html  pbsig.qmd  references.bib  spirit_jmm24.html  spirit_jmm24.qmd  spirit_uf24.html  spirit_uf24.qmd  spri.aux  spri.html  spri.qmd  spri.tex  spri_comp_pers.html  spri_comp_pers.qmd  spri_cp23.aux  spri_cp23.html  spri_cp23.qmd  spri_cp23.tex  styles.css
refactored/: simplicial.py
src/pbsig/: PHT.py  __init__.py  apparent_pairs.py  betti.py  boundary.cpp  classifiers.py  color.py  combinatorial.cpp  combinatorial.h  combinatorial.py  csgraph.py  dashboard.py  dashboard_extra  datasets.py  distance.py  dsp.py  fast_pbn.py  interpolate.py  itertools.py  landmark.cpp  (+28 more)
tests/: __init__.py  benchmark_matvec.py  test_combinatorial.py  test_eigen.py  test_filter.py  test_hash.py  test_laplacian.py  test_moves.py  test_persistent_betti.py  test_precon.py  test_rank.py  test_simplicial.py  test_spri.py  test_vineyards.py
trash/: CMakeLists.txt  Makefile  build.py  circle.py  cmds.py  proof_rank.py  rips.py  vineyards_util.py  weighted_complex.ipynb
(+33 files in other folders)
