[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12", "wheel", "setuptools", "pybind11>=2.8.0"]

[tool.poetry]
name = "pbopt"
authors = ["Matt Piekenbrock"]
version = "0.1.0"
description = "Persistent Betti Optimization"
build = "build.py"
packages = [
	{ include = "set_cover", from = "src" }, # from = "src/tallem" 
	{ include = "sc_ext", from = "src/set_cover" }
]
include = [
	{ path = "src/**/*.so", format = "wheel" },
	{ path = "src/**/*.pyd", format = "wheel" },
	"README.md"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"
