[build-system]
requires = ["setuptools>=42", "wheel", "numpy", "pybind11"] # "setuptools", pybind11, "scikit-build>=0.13", "cmake", "ninja"
build-backend = "setuptools.build_meta"
# build-backend = "hatchling.build"

# Validate with: validate-pyproject pyproject.toml 
[project]
name = "pbsig"
authors = [
	{ name = "Matt Piekenbrock", email = "matt.piekenbrock@gmail.com" }
]
version = "0.2.0"
# readme = "README.md"
description = "Persistent Betti Signatures"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
keywords = ["TDA"]
classifiers = [
	'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: Implementation :: CPython'
]



# packages = [
# 	{ include = "pbsig", from = "src" }, # from = "src/tallem" 
# 	#{ include = "ext", from = "src/pbsig" }
# ]
# include = [
# 	{ path = "src/**/*.so", format = "wheel" },
# 	{ path = "src/**/*.pyd", format = "wheel" },
# 	"README.md"
# ]

# [tool.hatch.build.targets.sdist]
# include = [
#   "/src"
# ]
# [tool.hatch.build]
# dev-mode-dirs = ["."]