[build-system]
requires = ["setuptools>=42", "wheel", "numpy", "pybind11"] # "setuptools", pybind11, "scikit-build>=0.13", "cmake", "ninja"
build-backend = "setuptools.build_meta"
# build-backend = "hatchling.build"

# Validate with: validate-pyproject pyproject.toml 
[project]
name = "pbsig"
authors = [
	{ name = "Matt Piekenbrock", email = "matt.piekenbrock@gmail.com" }
]
version = "0.2.4"
readme = "README.md"
description = "Spectral Rank Invariant"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
keywords = ["TDA"]
classifiers = [
	'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: Implementation :: CPython'
]

# packages = [
# 	{ include = "pbsig", from = "src" }, # from = "src/tallem" 
# 	#{ include = "ext", from = "src/pbsig" }
# ]
# include = [
# 	{ path = "src/**/*.so", format = "wheel" },
# 	{ path = "src/**/*.pyd", format = "wheel" },
# 	"README.md"
# ]

# [tool.hatch.build.targets.sdist]
# include = [
#   "/src"
# ]
# [tool.hatch.build]
# dev-mode-dirs = ["."]


[tool.ruff]
exclude = [".git", ".ruff_cache", "build", "dist"]
line-length = 120
indent-width = 2
preview = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "C90"]
ignore = ["COM"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$" # Allow underscore-prefixed unused variables

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.yapf]
based_on_style = "chromium"
spaces_before_comment = 2
split_before_logical_operator = true
continuation_align_style = "fixed"
continuation_indent_width = 2
column_limit = 120
use_tabs = true
join_multiple_lines = true
indent_blank_lines = false
allow_short_blocks_on_a_single_line = true
allow_split_before_default_or_named_assigns = false